--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "form-data": "^4.0.0",
     "jimp": "^0.22.8",
     "multer": "^1.4.4",
-    "openai": "^4.20.1"
+    "openai": "^4.20.1",
+    "uuid": "^9.0.1"
   },
   "author": "",
   "license": "ISC"
