--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node -r dotenv/config index.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.16.0",
     "axios": "^1.6.7",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
@@ -18,8 +19,10 @@
     "firebase-tools": "^11.1.0",
     "form-data": "^4.0.0",
     "jimp": "^0.22.8",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.4",
     "openai": "^4.20.1",
+    "tmp": "^0.2.3",
     "uuid": "^9.0.1"
   },
   "author": "",
